--- a/login/style.css
+++ b/login/style.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(images/bg3.jpg);
+    background-image: url(imagesLogin/bg3.jpg);
     height:100vh;
     width:100%;
     background-position: center;
